# climate-multilingual-chatbot

./: .deployment  .gitignore  ADMIN_DASHBOARD_DEPLOYMENT.md  API_INTEGRATION_COMPLETE.md  ARCHITECTURE.md  AZURE_DEPLOYMENT_GUIDE.md  CACHE_BYPASS_FIX.md  CACHE_FIX_DEPLOYMENT_CHECKLIST.md  CITATIONS_INTEGRATION_COMPLETE.md  CLIMATE_CHATBOT_STORY.md  COMMAND_A_OVERRIDE.md  DUPLICATE_RESPONSE_FIX.md  ENHANCED_TRACKING_COMPLETE.md  FRONTEND_INTEGRATION_COMPLETE.md  GOOGLE_SHEETS_SETUP.md  INTEGRATION_COMPLETE.md  LOADING_STATES_FIX.md  MARKDOWN_RENDERING_FIX.md  MIGRATION_PLAN.md  MIGRATION_TODO.md  PRODUCTION_CLEANUP_SUMMARY.md  PROJECT_EXPLANATION_MATRIX.md  PROJECT_VISUAL_SUMMARY.md  QUERY_LOGGING_INTEGRATION.md  QUERY_LOGGING_SETUP.md  QUICK_DEBUG.md  README.md  REAL_TIME_DATA_SETUP.md  REDIS_CACHE_FIX.md  SIMPLIFIED_LOADING_STATES_FIX.md  SQLITE_ANALYTICS_INTEGRATION.md  TASK-TO-DO.md  TECHNICAL_BREAKDOWN_ENHANCEMENTS.md  TODO.md  URL_VALIDATION_FIX.md  WHAT_TO_CHECK_IN_LOGS.md  add_debug_logging.py  admin_api_server.py  analytics_data.json  analytics_response.json  (+72 more)
.backup/: models_before_sync.tgz
.backup/models_before_sync/: conversation_parser.py  gen_response_nova.py  gen_response_unified.py  hallucination_guard.py  input_guardrail.py  main_nova.py  main_nova_new.py  nova_flow.py  rerank.py  retrieval.py  system_messages.py
.cursor/: mcp-settings.json  mcp_settings.json
.cursor/rules/: iterating.mdc  runstreamlit.mdc
.github/workflows/: deploy-azure.yml
.history/: Deployment_20250818224312.md  requirements-final_20250819130132.txt  requirements-final_20250819130142.txt  requirements-working_20250819134411.txt
.streamlit/: config.toml
Multilingual testing/: bake_off_cohere.py  combined_bake_off.py  translated_OPENAI.csv
Multilingual testing/Combined report/: multilingual_test_report_20250808_090845.json
docs/: ARCHITECTURE.md  AZURE_DEPLOYMENT.md  AZURE_DEPLOYMENT_GUIDE.md  HALLUCINATION_DETECTION_FIX.md  Infrastructure-Updated-Feb-2026.md  Infrastructure.md  MIGRATION_PLAN.md  REDIS_CACHE_FIX.md  REFACTORING_SAFETY.md  STARTUP_GUIDE.md  architecture_diagram
info/: ARCHITECTURE.md  AZURE_DEPLOYMENT.md  README.md  SECURITY_ASSESSMENT_REPORT.md  background.md  info.md  streamlit.md
onboarding/: BRANCHING.md  README.md
onboarding/components/: 01-backend.md  02-frontend.md  03-ai-pipeline.md  04-rag-system.md  05-caching.md  06-configuration.md
onboarding/diagrams/: 01-high-level-architecture.md  02-ai-pipeline-flow.md  03-data-flow.md  04-component-interactions.md
onboarding/slides/: 01-overview-presentation.md  02-ai-concepts-for-beginners.md  README.md
reports/: translation_bakeoff_report.md
scripts/: build.sh  debug_redis_cache.py  ingest_thorncliffe_docs.py  normalize_pinecone_titles.py  populate_pinecone.py  show_rewriter_output.py  show_rewriter_output_specific.py  test_pipeline_behavior.py  utf8_pipeline_probe.py
src/: main_nova.py
src/app/: globals.css  layout.tsx  page.tsx
src/dashboard/: README.md
src/models/: batch_optimizer.py  climate_pipeline.py  cohere_flow.py  gen_response_nova.py  gen_response_unified.py  hallucination_guard.py  input_guardrail.py  main_nova_new.py  nova_flow.py  query_rewriter.py  query_routing.py  redis_cache.py  rerank.py  retrieval.py  system_messages.py  title_normalizer.py
src/utils/: analytics.py  cost_tracker.py  logging_setup.py  normalized_file_title_map.csv  query_logger.py  system_init.py
src/webui/: app_nova copy.py  app_nova.py  app_nova_.py  (+1 more)
tests/: climate_change_convo_10turns_by_language.md  conftest.py  test_cache_fix.py  test_command_a_override.py  test_frontend.js  test_override_simple.py  test_query_rewriter_classifications.py  test_query_rewriter_intents.py  test_query_rewriter_json.py
(+138 files in other folders)
